# ChangeLog for dev-lang/ocaml
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/ocaml/ChangeLog,v 1.167 2009/06/20 14:54:57 aballier Exp $

  20 Jun 2009; Alexis Ballier <aballier@gentoo.org>
  -files/ocaml-3.11.0_beta1-configure.patch,
  -files/ocaml-3.11.0_beta1-exec-stack-fixes.patch,
  -files/ocaml-3.11.0_beta1-yaccldflags.patch, ocaml-3.11.1.ebuild:
  Make a tarball from the various patches

  19 Jun 2009; Alexis Ballier <aballier@gentoo.org> -ocaml-3.11.0.ebuild:
  remove old

*ocaml-3.11.1 (15 Jun 2009)

  15 Jun 2009; Alexis Ballier <aballier@gentoo.org>
  -ocaml-3.11.1_rc1.ebuild, +ocaml-3.11.1.ebuild:
  bump to final 3.11.1

  03 Jun 2009; Alexis Ballier <aballier@gentoo.org> -ocaml-3.08.4.ebuild:
  remove old

*ocaml-3.11.1_rc1 (03 Jun 2009)

  03 Jun 2009; Alexis Ballier <aballier@gentoo.org>
  -ocaml-3.11.1_rc0.ebuild, +ocaml-3.11.1_rc1.ebuild:
  version bump

*ocaml-3.11.1_rc0 (19 May 2009)

  19 May 2009; Alexis Ballier <aballier@gentoo.org> ocaml-3.10.2.ebuild,
  ocaml-3.11.0.ebuild, +ocaml-3.11.1_rc0.ebuild:
  bump to 3.11.1rc0 and define eapi before inherit

  09 Apr 2009; Raúl Porcel <armin76@gentoo.org> ocaml-3.10.2.ebuild:
  arm stable

  20 Jan 2009; Alexis Ballier <aballier@gentoo.org> ocaml-3.08.4.ebuild,
  ocaml-3.10.2.ebuild, ocaml-3.11.0.ebuild:
  explicitly set RDEPEND to DEPEND

  20 Jan 2009; Alexis Ballier <aballier@gentoo.org>
  files/ocaml-3.11.0_beta1-yaccldflags.patch:
  include upstream bug report link in the patch

  20 Jan 2009; Alexis Ballier <aballier@gentoo.org> ocaml-3.10.2.ebuild,
  ocaml-3.11.0.ebuild:
  Set LC_ALL to C because there are many a-z A-Z regexps that may cause
  build failures, bug #255379

  11 Dec 2008; Alexis Ballier <aballier@gentoo.org> files/ocaml-rebuild.sh:
  Simplify ocaml-rebuild.sh: dont clean first and let portage handle the
  deps, use --oneshot to not pollute world file, bug #250192

*ocaml-3.11.0 (08 Dec 2008)
