@@ -11,13 +11,13 @@ DIST ocaml-3.10.2.tar.bz2 2284860 RMD160 f631230b090dbd9bf9a9f71631cd0347c033cbb
 DIST ocaml-3.11.1.tar.gz 2859411 RMD160 7a48021e80602917cc91f7cc3305d5f3ab92b0bc SHA1 05ccb525bb53f8676e238de31209713ec38ae63a SHA256 70bf4ec660b07c9119123eb8ef2a5d9e5e98fac8c4082cca33b2622e91386b53
 DIST ocaml-patches-1.tar.bz2 3108 RMD160 ad56f8be4b15347794f3167be82124fcdbf6f6dc SHA1 542ae4c2b1515730fe0c9050b6658106ef69ad19 SHA256 ad1c252cba7cc50f70d19049fcd78aa359672e436ab9906424548229a04afa49
 EBUILD ocaml-3.10.2.ebuild 4483 RMD160 4ff4c804896a2fd8541061219e46ca1612ecffa8 SHA1 3e1aeb9f1471392431f9ea9283feac2290e467f4 SHA256 eca3f4782ca03e663acde9062231367c248624d0a655cf0200f24aeb8fa47da4
-EBUILD ocaml-3.11.1.ebuild 3756 RMD160 0e379e55e393f87539ad30fb82dad947a21631a9 SHA1 03a4e237aa73f9e19215f5d68d52623b61e09606 SHA256 ddaf9abd9140973ff3213e9ec3a671dc5e6b2efe2c6fc447b3c254ba61967371
-MISC ChangeLog 26600 RMD160 2bc7fb3e3de9bb3f33f292feb76be81569e3a74a SHA1 a41abcae1b1273fe7c49523436a47d35456439d1 SHA256 fa1bbcee412873d054c64d7314416db8e4dc60445f74bc1777f9fe5de381dde2
+EBUILD ocaml-3.11.1.ebuild 3833 RMD160 651deba14573e94996d9e77a3d9d996ded9ac69c SHA1 32f543c9306936c4b0b33c072f3125080dfbc084 SHA256 58a384cf8ba6cf5e5936bca0c1132866e324b15e828c886644b481db79b1584b
+MISC ChangeLog 26772 RMD160 7c604f0ad05fab3e460357bbcd029f70a39f1ecd SHA1 e98d5d1079b38a0d7c33bc3b3908706f0e4b0772 SHA256 6657ea51d147f936ebd0ced393c023f480b33fbdc1bb3b685984bf62bb20b7bf
 MISC metadata.xml 155 RMD160 dfaa057e679b01302a807c75a32a910098b26809 SHA1 94024f83dcacbb53e92be090dd0f994ec93dc90d SHA256 118048376ebb76f57628b0819f3de4856e73959c2578c88715d37ea2d1e0af81
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAko8+EgACgkQvFcC4BYPU0p0jgCeI/yVX35DJZTw6fLWKmsKiQga
-u7UAn1auGi4+6vid7J003wOzi4NawV7W
-=3tyZ
+iEYEARECAAYFAko9CpEACgkQvFcC4BYPU0oVOQCfTVlGRRi8OaUfG5NgFnjptuJs
+w0sAnRzadMTed2JaIhwin+8HR33B2uON
+=+6GH
 -----END PGP SIGNATURE-----
