@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/ocaml
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/ocaml/ChangeLog,v 1.167 2009/06/20 14:54:57 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/ocaml/ChangeLog,v 1.168 2009/06/20 16:12:58 aballier Exp $
+
+  20 Jun 2009; Alexis Ballier <aballier@gentoo.org> ocaml-3.11.1.ebuild:
+  use CHOST prefixed toolchain for building, this does not give us cross
+  compile support though
 
   20 Jun 2009; Alexis Ballier <aballier@gentoo.org>
   -files/ocaml-3.11.0_beta1-configure.patch,
